# api/controller/car_controller.go
@@ -16,9 +16,16 @@ type CarController struct {
 func NewCarController(carUsecase domain.CarUseCase, logger *zap.Logger, router *gin.RouterGroup) {
 	controller := &CarController{carUsecase: carUsecase}
 
-	router.GET("/car/:carId", controller.getCar)
+	router.GET("/car/:id", controller.getCar)
 }
 
+// @Schemes
+// @Tags car
+// @Accept json
+// @Produce json
+// @Param id path int true "Id"
+// @Success 200 {string} Get car by id
+// @Router /car/{id} [get]
 func (controller *CarController) getCar(ctx *gin.Context) {
 	carId, err := strconv.Atoi(ctx.Param("id"))
 
